--- a/frontend/templates/index/base.html
+++ b/frontend/templates/index/base.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='img/bcl/umjinilogo.jpg') }}" />
+  <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='img/bcl/umjinilogo.png') }}" />
   <title>
     {% block title %} {% endblock %}
   </title>
