--- a/frontend/templates/index/index.html
+++ b/frontend/templates/index/index.html
@@ -14,10 +14,10 @@
               <div class="d-flex">
                 <div class="me-auto">
                   <h1 class="display-1 font-weight-bold mt-n4 mb-0 text-white">umjiniti</h1>
-                  <h6 class="text-uppercase mb-0 ms-1 text-white">Network Management System</h6>
+                  <h6 class="text-uppercase mb-0 ms-1 text-white">Network Monitoring and Automation Platform</h6>
                 </div>
                 <div class="ms-auto">
-                  <img class="w-50 float-end mt-lg-n4 rounded-circle img-fluid" src="{{ url_for('static', filename='img/bcl/umjinilogo.jpg') }}" alt="umjini logo" />
+                  <img class="w-50 float-end mt-lg-n4 rounded-circle img-fluid" src="{{ url_for('static', filename='img/bcl/umjinilogo.png') }}" alt="umjini logo" />
                 </div>
               </div>
               <div class="row mt-4">
@@ -36,7 +36,7 @@
                         <span class="mb-0 font-weight-normal">Register</span>
                       </a>
                       <hr class="horizontal dark">
-                      <a class="d-flex" href="{{ url_for('login') }}">
+                      <a class="d-flex" ->
                         <div class="mb-0 me-3" >
                           <div class="icon icon-shape icon-md shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-in-right" viewBox="0 0 16 16">
@@ -69,73 +69,32 @@
                   <div class="card bg-gradient-dark move-on-hover">
                     <div class="card-body">
                       <div class="d-flex">
-                        <h5 class="mb-0 text-white">To Do</h5>
+                        <h5 class="mb-0 text-white">Active Alerts</h5>
                         <div class="ms-auto">
-                          <h1 class="text-white text-end mb-0 mt-n2">7</h1>
-                          <p class="text-sm mb-0 text-white">items</p>
+                          <h1 class="text-white text-end mb-0 mt-n2">{{ alert_count }}</h1>
+                          <p class="text-sm mb-0 text-white">alerts</p>
                         </div>
                       </div>
-                      <p class="text-white mb-0">Shopping</p>
-                      <p class="mb-0 text-white">Meeting</p>
                     </div>
-                    <a href="javascript:;" class="w-100 text-center py-1" data-bs-toggle="tooltip" data-bs-placement="top" title="Show More">
+                    <a class="w-100 text-center py-1" data-bs-toggle="tooltip" data-bs-placement="top" title="Show More">
                       <i class="fas fa-chevron-down text-white"></i>
                     </a>
                   </div>
-                  <div class="card move-on-hover mt-4">
-                    <div class="card-body">
-                      <div class="d-flex">
-                        <p class="mb-0">Emails (21)</p>
-                        <a href="javascript:;" class="ms-auto" data-bs-toggle="tooltip" data-bs-placement="top" title="Check your emails">
-                          Check
-                        </a>
-                      </div>
-                    </div>
-                  </div>
                 </div>
                 <div class="col-lg-4 col-md-4 mt-4 mt-sm-0">
-                  <div class="card card-background card-background-mask-primary move-on-hover align-items-start">
-                    <div class="cursor-pointer">
-                      <div class="full-background" style="background-image: url('../assets/img/curved-images/curved1.jpg')"></div>
-                      <div class="card-body">
-                        <h5 class="text-white mb-0">Some Kind Of Blues</h5>
-                        <p class="text-white text-sm">Deftones</p>
-                        <div class="d-flex mt-5">
-                          <button class="btn btn-outline-white rounded-circle p-2 mb-0" type="button" data-bs-toggle="tooltip" data-bs-placement="top" title="Prev">
-                            <i class="fas fa-backward p-2"></i>
-                          </button>
-                          <button class="btn btn-outline-white rounded-circle p-2 mx-2 mb-0" type="button" data-bs-toggle="tooltip" data-bs-placement="top" title="Pause">
-                            <i class="fas fa-play p-2"></i>
-                          </button>
-                          <button class="btn btn-outline-white rounded-circle p-2 mb-0" type="button" data-bs-toggle="tooltip" data-bs-placement="top" title="Next">
-                            <i class="fas fa-forward p-2"></i>
-                          </button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card move-on-hover mt-4">
+                  <div class="card bg-gradient-dark move-on-hover">
                     <div class="card-body">
                       <div class="d-flex">
-                        <p class="my-auto">Messages</p>
+                        <h5 class="mb-0 text-white">Probes Online</h5>
                         <div class="ms-auto">
-                          <div class="avatar-group">
-                            <a href="javascript:;" class="avatar avatar-sm border-0 rounded-circle" data-bs-toggle="tooltip" data-bs-placement="top" title="2 New Messages">
-                              <img alt="Image placeholder" src="../assets/img/team-1.jpg">
-                            </a>
-                            <a href="javascript:;" class="avatar avatar-sm border-0 rounded-circle" data-bs-toggle="tooltip" data-bs-placement="top" title="1 New Message">
-                              <img alt="Image placeholder" src="../assets/img/team-2.jpg">
-                            </a>
-                            <a href="javascript:;" class="avatar avatar-sm border-0 rounded-circle" data-bs-toggle="tooltip" data-bs-placement="top" title="13 New Messages">
-                              <img alt="Image placeholder" src="../assets/img/team-3.jpg">
-                            </a>
-                            <a href="javascript:;" class="avatar avatar-sm border-0 rounded-circle" data-bs-toggle="tooltip" data-bs-placement="top" title="7 New Messages">
-                              <img alt="Image placeholder" src="../assets/img/team-4.jpg">
-                            </a>
-                          </div>
+                          <h1 class="text-white text-end mb-0 mt-n2">{{ probes_online_count }}</h1>
+                          <p class="text-sm mb-0 text-white">probes</p>
                         </div>
                       </div>
                     </div>
+                    <a class="w-100 text-center py-1" data-bs-toggle="tooltip" data-bs-placement="top" title="Show More">
+                      <i class="fas fa-chevron-down text-white"></i>
+                    </a>
                   </div>
                 </div>
               </div>
