--- a/frontend/templates/app/probedashboard.html
+++ b/frontend/templates/app/probedashboard.html
@@ -17,7 +17,7 @@
                         <i class="ni ni-circle-08 text-dark text-gradient text-lg opacity-10" aria-hidden="true"></i>
                   </div>
                     <h5 class="text-white font-weight-bolder mb-0 mt-3">
-                        1600
+                        {{ mobile_count }}
                     </h5>
                     <span class="text-white text-sm">Offline Endpoints</span>
                 </div>
